VERSION 0.37 (2019-06-*)
  * better support for cygwin (or msys) environment
  * passing parameters with $@ instead of $* in bash scripts to prevent
    interpreting spaces in arguments as parameter separators.
  * Preinstalled logging package upgraded to v0.9-107

VERSION 0.36 (2019-03-06)
  * fixed 'docker stop' to remove also stopped containers.
  * #185(rt): `repo init` fixed
  * handling `docker .. --packages` parameter fixed: value was not considered
  * `proj build` and `docker build` have new option '--tag' which enforces
    tagging packages with RC revision number.

VERSION 0.35 (2019-01-17)
  * 'docker pack' command added. It copies project pack into running docker
    RSuite build container.
  * #181: installing RSuiteStudio fixed with 'install' command
  * 'proj zip' has new option --extras which makes it possible to include
    some external resources into deployment zip.
  * bash completions fixed to have proper line endings.

VERSION 0.34 (2018-12-13)
  * Then installing RSuite on Windows it prevents installing source packages
    if they are available in newer version (e.g. processx). It works much
    smoother for older R versions.
  * install if passed RSuite installation package uses it instead of one
    available on CRAN
  * install --cran option added not to use default S3 repository. That is
    important for connection-less environment.

VERSION 0.33 (2018-09-25)
  * installation of RSuite fixed to use not only package available on CRAN:
    it considers also user provided package and WLOG S3 repository.
  * `docker exec` fixed to properly handle passed command.
  * -h option added to main script as shortcut for help.
  * `repo addbioc` and `pkgzip bioc` subcommands added to handle source
    packages from BioConductor.

VERSION 0.32 (2018-08-15)
  * Handling of errors in running docker commands fixed.
  * `docker update` command added which updates all rsuite containers
     to newer versions.